WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74631
HTMLMediaElement should not register for document activation callbacks as it doesn't use them
https://bugs.webkit.org/show_bug.cgi?id=74631
Summary
HTMLMediaElement should not register for document activation callbacks as it ...
Brady Eidson
Reported
2011-12-15 10:55:59 PST
HTMLMediaElement should not register for document activation callbacks as it doesn't use them
Attachments
Patch v1 - Remove the unneeded calls
(2.63 KB, patch)
2011-12-15 11:09 PST
,
Brady Eidson
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2011-12-15 11:09:06 PST
Created
attachment 119468
[details]
Patch v1 - Remove the unneeded calls
Brady Eidson
Comment 2
2011-12-15 11:28:25 PST
Landed in
r102969
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug