https://bugs.webkit.org/show_bug.cgi?id=74631 HTMLMediaElement should not register for document activation callbacks as it doesn't use them

Reviewed by Eric Carlson.

No new tests. (No behavior change, pruning useless code)

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement):
(WebCore::HTMLMediaElement::~HTMLMediaElement):
(WebCore::HTMLMediaElement::willMoveToNewOwnerDocument):
(WebCore::HTMLMediaElement::didMoveToNewOwnerDocument):



git-svn-id: svn://svn.chromium.org/blink/trunk@102969 bbb929c8-8fbe-4397-9dbb-9b2b20218538