third_party/WebKit/Source/WebCore/html/HTMLMediaElement.cpp
@@ -239,7 +239,6 @@ HTMLMediaElement::HTMLMediaElement(const QualifiedName& tagName, Document* docum
 #endif
 {
     LOG(Media, "HTMLMediaElement::HTMLMediaElement");
-    document->registerForDocumentActivationCallbacks(this);
     document->registerForMediaVolumeCallbacks(this);
     document->registerForPrivateBrowsingStateChangedCallbacks(this);
     
@@ -261,7 +260,6 @@ HTMLMediaElement::~HTMLMediaElement()
     if (m_isWaitingUntilMediaCanStart)
         document()->removeMediaCanStartListener(this);
     setShouldDelayLoadEvent(false);
-    document()->unregisterForDocumentActivationCallbacks(this);
     document()->unregisterForMediaVolumeCallbacks(this);
     document()->unregisterForPrivateBrowsingStateChangedCallbacks(this);
 #if ENABLE(VIDEO_TRACK)
@@ -284,7 +282,6 @@ void HTMLMediaElement::willMoveToNewOwnerDocument()
     if (m_isWaitingUntilMediaCanStart)
         document()->removeMediaCanStartListener(this);
     setShouldDelayLoadEvent(false);
-    document()->unregisterForDocumentActivationCallbacks(this);
     document()->unregisterForMediaVolumeCallbacks(this);
     removeElementFromDocumentMap(this, document());
     HTMLElement::willMoveToNewOwnerDocument();
@@ -296,7 +293,6 @@ void HTMLMediaElement::didMoveToNewOwnerDocument()
         document()->addMediaCanStartListener(this);
     if (m_readyState < HAVE_CURRENT_DATA)
         setShouldDelayLoadEvent(true);
-    document()->registerForDocumentActivationCallbacks(this);
     document()->registerForMediaVolumeCallbacks(this);
     addElementToDocumentMap(this, document());
     HTMLElement::didMoveToNewOwnerDocument();
